tests/good/syntax/023-unit.clap
val u : { U } = U at { U }

