tests/bad/syntax/006-type-identifier-2.clap
type type_identifier_can_be_as_long_as_you_need! = { U }
